# brokerage-os

./: .gitignore  GAP_ANALYSIS.md  IMPROVEMENT_ANALYSIS.md  LICENSE  README.md  SECURITY_AUDIT.md  SETUP_NOTES.md  TEST_REPORT.md  prd.md
bos/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bos/.github/workflows/: ci.yml
bos/app/: __init__.py  audit.py  chunking.py  config.py  crypto.py  db.py  graph.py  injection.py  llm.py  logging_setup.py  main.py  metrics.py  otel.py  security.py  state.py
bos/app/agents/: __init__.py  approval.py  base.py  ceo.py  composer.py  errors.py
bos/app/agents/managers/: __init__.py  _common.py  compliance_manager.py  operations_manager.py  (+1 more)
bos/app/api/: __init__.py  admin.py  approval.py  chat.py  deps.py  ingest.py  slack.py  voice.py
bos/app/memory/: __init__.py  long_term.py  organizational.py  pruning.py  short_term.py
bos/app/tools/: __init__.py  base.py  bloomberg.py  calendar.py  compliance.py  crm.py  documents.py  docusign.py  research.py  retrieval.py  salesforce.py
bos/deploy/grafana/: bos-dashboard.json
bos/deploy/k8s/: README.md  deployment.yaml  hpa.yaml
bos/eval/: __init__.py  runner.py
bos/eval/datasets/: scenarios.jsonl
bos/knowledge_base/: compliance_manual.md  investment_guidelines.md  operations_sop.md
bos/scripts/: ingest_docs.py  init_db.py
bos/tests/: conftest.py  test_api.py  test_graph.py  test_phase2.py  test_security.py  test_security_fixes.py  test_tools.py
bos/web/: admin.html  index.html  voice.html
(+11 files in other folders)
